Closed
Bug 573388
Opened 15 years ago
Closed 15 years ago
ASSERTION: aWebProgress and channel callbacks do not point to the same docshell
Categories
(MailNews Core :: Backend, defect)
MailNews Core
Backend
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: neil, Assigned: neil)
Details
(Keywords: regression)
Attachments
(1 file, 2 obsolete files)
|
3.56 KB,
patch
|
neil
:
review+
standard8
:
superreview+
|
Details | Diff | Splinter Review |
I noticed this assertion while reading a message.
aWebProgress is the content docShell for the IMAP url.
However the channel callbacks are the chrome docShell for the mail window.
The assertion was introduced by bug 374577.
Comment 1•15 years ago
|
||
The code that does the asserting was introduced by bug 374577, and modified a bit by 479906. Is it your belief that this assertion has been triggered all along, or that this is new?
| Assignee | ||
Comment 2•15 years ago
|
||
No, it started recently (say about a week ago).
Comment 3•15 years ago
|
||
Would I be correct to assume that this is trunk-only?
| Assignee | ||
Comment 4•15 years ago
|
||
Yes, this is both c-c trunk and m-c trunk.
Updated•15 years ago
|
Keywords: regression,
regressionwindow-wanted
Comment 5•15 years ago
|
||
I see this happen if I click on imap messages while autosync is downloading other imap messages in the same folder. I'm wondering if this somehow related to the imap disk cache corruptions and/or offline store corruptions.
Comment 6•15 years ago
|
||
Actually, I see this whenever we fetch an imap message from the server for display, as opposed to using the disk cache or memory cache or offline store.
Comment 7•15 years ago
|
||
Neil, what do you think of this approach? This makes us use the loading docshell when setting up the notification callbacks, if available, which makes the content policy code less unhappy. I checked that the cert exception override dialog is still displayed when clicking on a message, if there's no cert exception.
| Assignee | ||
Updated•15 years ago
|
Attachment #486805 -
Attachment is patch: true
Attachment #486805 -
Attachment mime type: application/octet-stream → text/plain
| Assignee | ||
Comment 8•15 years ago
|
||
Given your diagnosis, this is an alternative approach to the problem.
What do you think?
Attachment #486906 -
Flags: review?(bienvenu)
Comment 9•15 years ago
|
||
Comment on attachment 486906 [details] [diff] [review]
Alternative approach
yes, I thought about that alternative in the middle of the night. It's definitely nicer. I think you want to return an error if we can't get the docshell, instead of always returning NS_OK, and unless this comment isn't valid anymore, it should be propagated to the nsIMsgWindow.idl:
- // on the message window docshell. Under no circumstances should you be holding on to
- // the docshell returned here outside the scope of your routine.
I'll give the patch a try.
Comment 10•15 years ago
|
||
Comment on attachment 486906 [details] [diff] [review]
Alternative approach
r=me, modulo prev comments...
Attachment #486906 -
Flags: review?(bienvenu) → review+
Updated•15 years ago
|
Attachment #486805 -
Attachment is obsolete: true
Attachment #486805 -
Flags: review?(neil)
| Assignee | ||
Comment 11•15 years ago
|
||
Seeking sr because of the API addition to nsIMsgWindow.
Assignee: bienvenu → neil
Attachment #486906 -
Attachment is obsolete: true
Attachment #487475 -
Flags: superreview?(bugzilla)
Attachment #487475 -
Flags: review+
Comment 12•15 years ago
|
||
Comment on attachment 487475 [details] [diff] [review]
Addressed review comments
So I kinda prefer David's solution on the fact it doesn't rely on the hard-coded "messagepane" element. However, looking at where GetMessageWindowDocShell is used currently, there's a bigger set of issues to resolve to avoid that hard-coding. Therefore I think we'll take this for now and look at those issues later.
Attachment #487475 -
Flags: superreview?(bugzilla) → superreview+
| Assignee | ||
Comment 13•15 years ago
|
||
Pushed changeset e9aa02dcfc2d to comm-central.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Updated•10 years ago
|
Keywords: regressionwindow-wanted
You need to log in
before you can comment on or make changes to this bug.
Description
•