Bug 573388 ASSERTION: aWebProgress and channel callbacks do not point to the same docshell r=bienvenu sr=Standard8